fix: add member to channel on mobile version from bottom

--- a/src/app/overlay/add-member-to-channel/add-member-to-channel.component.scss
+++ b/src/app/overlay/add-member-to-channel/add-member-to-channel.component.scss
@@ -3,8 +3,9 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    max-width: 541px;
+    padding: 40px 20px;
 }
+
 input {
     display: flex;
     width: 100%;
