--- a/src/app/overlay/edit-channel/edit-channel.component.scss
+++ b/src/app/overlay/edit-channel/edit-channel.component.scss
@@ -25,7 +25,6 @@
 
 .mobile-overlay {
   position: relative;
-  width: 100vw;             
   height: 100vh;            
   background-color: var(--color-white);
   border-radius: 0;        
