--- a/src/styles.scss
+++ b/src/styles.scss
@@ -230,6 +230,12 @@ h4 {
   padding: 40px 20px;
 }
 
+.overlay-bottom {
+    background-color: var(--color-white);
+      border-radius: 30px 30px 0px 0px;
+      box-shadow: 0px 6px 10px 0px #00000033;
+}
+
 //i use this to style name from edit channel btn
 .nameTag {
   font-weight: 600;
@@ -237,7 +243,6 @@ h4 {
   color: var(--color-purple-medium);
   transition: all 0.2s ease;
   cursor: pointer;
-
   &:hover {
     font-weight: 700;
     font-style: Bold;
